<resources>
    <string name="app_name">Week2Latihan2</string>
    <string name="title">Kalkulator</string>
    <string name="hasil">Hasil</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="plus">+</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="min">-</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="times">*</string>
    <string name="_0">0</string>
    <string name="c">C</string>
    <string name="div">/</string>
    <string name="equals">=</string>
    <string name="default_calc">0</string>
    <string name="modulus">%</string>
</resources>