<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="35dp"
    android:background="@drawable/background_color">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/tv_kalkulasi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_calc"
        android:textSize="20sp"
        android:layout_below="@+id/title" />
    <TextView
        android:id="@+id/tv_hasil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hasil"
        android:textSize="25sp"
        android:layout_below="@+id/tv_kalkulasi" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1"
        style="@style/buttons"
        android:layout_below="@+id/btn_10"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_2"
        style="@style/buttons"
        android:layout_below="@+id/btn_10"
        android:layout_toEndOf="@id/btn_1" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_3"
        style="@style/buttons"
        android:layout_below="@+id/btn_10"
        android:layout_toEndOf="@id/btn_2"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_4"
        style="@style/buttons"
        android:layout_below="@id/btn_1" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_5"
        style="@style/buttons"
        android:layout_below="@id/btn_1"
        android:layout_toEndOf="@id/btn_4"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_6"
        style="@style/buttons"
        android:layout_below="@id/btn_1"
        android:layout_toEndOf="@id/btn_5"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_7"
        style="@style/buttons"
        android:layout_below="@id/btn_5"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_8"
        style="@style/buttons"
        android:layout_below="@id/btn_5"
        android:layout_toEndOf="@id/btn_7"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_9"
        style="@style/buttons"
        android:layout_below="@id/btn_5"
        android:layout_toEndOf="@id/btn_8"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        style="@style/buttons"
        android:layout_below="@id/btn_8"
        android:layout_toEndOf="@id/btn_7"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/c"
        style="@style/buttons"
        android:layout_below="@+id/tv_hasil" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/div"
        style="@style/buttons"
        android:layout_below="@id/tv_hasil"
        android:layout_toEndOf="@id/btn_3"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plus"
        style="@style/buttons"
        android:layout_below="@+id/btn_10"
        android:layout_toEndOf="@id/btn_3"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/min"
        style="@style/buttons"
        android:layout_below="@id/btn_1"
        android:layout_toEndOf="@id/btn_6"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/times"
        style="@style/buttons"
        android:layout_below="@id/btn_5"
        android:layout_toEndOf="@id/btn_9"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/equals"
        style="@style/buttons"
        android:layout_below="@id/btn_8"
        android:layout_toEndOf="@id/btn_9"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulus"
        style="@style/buttons"
        android:layout_below="@+id/tv_hasil"
        android:layout_toEndOf="@id/btn_2"/>
</RelativeLayout>